# placeholder

./: Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
dwn-msg/: Cargo.toml  README.md
dwn-node/: Cargo.toml
dwn-rs/: Cargo.toml
dwn-sdk-rs/: Cargo.toml
dwn-types/: Cargo.toml  README.md
oid4vci-rs/: Cargo.toml  README.md
oid4vp-rs/: Cargo.toml
openid4vci-rs/: Cargo.toml
openid4vp-rs/: Cargo.toml
vc-holder/: Cargo.toml  README.md
vc-issuer/: Cargo.toml  README.md
vc-verifier/: Cargo.toml  README.md
